# llp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  linux.yml  windows.yml
include/llp/: error.hpp  file_data.hpp  lexer.hpp  native_tokens.hpp  parser.hpp  token.hpp  token_set.hpp  tokenizer.hpp  tokens.hpp
include/llp/examples/: json.hpp
src/: file_data.cpp  lexer.cpp  native_tokens.cpp  parser.cpp  token.cpp  token_set.cpp  tokenizer.cpp  tokens.cpp
tests/: test.cpp
tests/examples/: demo.cpp  demo.hpp  demo.json
